tests/fixtures/invalid/pow_set_list_bytes.py
# Cannot call pow() with Set[int], List[int], Bytes
x = pow({1, 2, 3}, [1, 2, 3], b"hello")
